css/app.css
@font-face {	
	font-family: GothamBold;    /*headline*/
	src:
	 url('fonts/Gotham-Bold.otf');

}
@font-face {
	font-family: GothamMedium;     /*in front of color head line*/
	src:
	 url('fonts/Gotham-Medium.otf');

}
@font-face {
	font-family: Baskerville;     /*subhead*/
	src:
	 url('fonts/baskvl.ttf');
}

@font-face {
	font-family: GothamRoundedBook;     /*main body text*/
	src:
	 url('fonts/GothamRnd-Book.otf');
}
@font-face {
	font-family: DroidSansRegular;     /*online explainers/captions*/
	src:
	 url('fonts/DroidSans.ttf');
}


h1 {
	margin-top: 1em;
	font-family: 'GothamBold', 'Helvetica', sans-serif;
	font-size: 2.5rem;
	border-bottom: 4px solid;
}

b {
	font-family: 'GothamMedium', sans-serif;
	color: #333;
}

.colorA {
	color: #20406F;
	border-bottom-color: #20406F;
}

.colorB {
	color: #4D668C;
	border-bottom-color: #4D668C;
}

.colorC {
	color: #798DA9;
	border-bottom-color: #798DA9;
}

.medium-push-4 h1, .medium-push-4 p {
	text-align: right;
}

a {
	font-family: 'GothamMedium', sans-serif;
	color: #20406F;
}

a:hover {
	font-family: 'GothamMedium', sans-serif;
	color: #0080C5;
	border-bottom: 1px solid #F8CF23;
}

button {
	background-color: #0080C5;
}

h2 {
	font-family: 'GothamMedium', sans-serif;
}

body { 
	font-family: 'Baskerville', Times, serif;
}

ul#tabs { 
	list-style-type: none; 
	margin: 30px 0 0 0; 
	padding: 0 0 0.3em 0; 
}

ul#tabs li { 
	display: inline;
}

ul#tabs li a { 
	color: #42454a; 
	background-color: #dedbde; 
	border: 1px solid #c9c3ba; 
	border-bottom: none; padding: 0.3em; 
	text-decoration: none; 
}

ul#tabs li a:hover { 
	background-color: #f1f0ee;
}

ul#tabs li a.selected {
	color: #000; 
	background-color: #f1f0ee; 
	font-weight: bold; 
	padding: 0.7em 0.3em 0.38em 0.3em; 
}

div.large-12-columns{ 
	padding: 0.5em; 
}

div.large-12-columns.hide { 
	display: none; 
}

.homepage-text{	/*background-color: #f1f0ee; */
	font-family: 'Baskerville', Times, serif;
}

.about {
	text-align: center;
}

.homepage-title{
	display: block;
	font-family: 'GothamBold', 'Helvetica', sans-serif;
	font-size: 2.5rem;
	line-height: 3rem;
	margin-top: 2.5rem;
	margin-bottom: 2rem;
	color: #0080C5;
}

.subheader{
	background-color: #fafafa; 
	padding: 0.7em 0.3em 0.38em 0.3em; 
	font-family: 'GothamBold', Helvetica, Sans-Serif;
}

#logo_top_container{
    text-align: center;
}

#nav_bar {
    min-height: 85px; 
    width: 100%;
    display: -webkit-flex;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: white;
    z-index: 1;
    border-bottom: 1px solid #ddd;
}

.sticky {
    position: fixed;
    top: 0;
    clear: both;
}

.sticky_helper {
    margin-top: 100px;  
}

#nav_bar_list {
    list-style: none;
    padding: 0;
    list-style-type: none;

}

.nav_link_button {
    text-align: center;
    padding: 20px;   
    margin: 10px;
    display: inline;
}

#nav_bar_small {
    display: none;
    text-align: center;
}

#nav_bar_small_list {
    list-style: none;   
    padding: 0;
    list-style-type: none;
    display: -webkit-flex;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
}

.nav_link_button_small {
    display: inline;
    margin-right: 3px;
}

.nav_link {
	color: #000; 
	padding: 0.7em 0.3em 0.38em 0.3em;
}


.nav-section a:hover{
	/*background-color: #f1f0ee; */
	color: #0080C5;
	border-bottom: 2px solid #F8CF23;
	padding: 0.3em; 
	text-decoration: none; 

}

.nav-section a.selected{
	color: #000; 
	background-color: #f1f0ee; 
	font-weight: bold; 
	padding: 0.7em 0.3em 0.38em 0.3em; 
} 
@media screen and (max-width: 730px) {
    .nav_link {
        font-size: 14px;   
    }
    #nav_bar {
        display: none;   
    }
    #main_content {
        display: none;
    }
    #nav_bar_small {
        display: block;   
    }
}

